# smarthack2024

./: CMakeLists.txt  README.md  main.cpp
map/: connections.csv  customers.csv  refineries.csv  tanks.csv
src/: DemandHeap.cpp  DemandHeap.hpp  Map.cpp  Map.hpp  Movements.cpp  Movements.hpp  Penalty.cpp  Penalty.hpp  Round.cpp  Round.hpp  Simulation.cpp  Simulation.hpp
